--- a/extension/package.json
+++ b/extension/package.json
@@ -26,18 +26,20 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./ && npm run copy-files",
-    "copy-files": "node -e \"const fs = require('fs'); const path = require('path'); if (!fs.existsSync('out/src')) fs.mkdirSync('out/src', {recursive: true}); fs.copyFileSync('src/webview.html', 'out/src/webview.html'); fs.copyFileSync('src/webview.js', 'out/src/webview.js');\"",
-    "watch": "tsc -watch -p ./"
+    "vscode:prepublish": "npm run bundle",
+    "compile": "tsc -p .",
+    "watch": "tsc -watch -p ./",
+    "bundle": "esbuild src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node --minify",
+    "bundle:watch": "esbuild src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node --watch"
   },
   "devDependencies": {
     "@types/vscode": "^1.74.0",
-    "@types/node": "16.x",
-    "@types/express": "^4.17.17",
-    "typescript": "^4.9.4"
+    "@types/node": "22.x",
+    "@types/express": "^5.0.0",
+    "typescript": "^5.8.0",
+    "esbuild": "^0.25.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^5.1.0"
   }
 } 
