docs: Update description for prompt_for_user_input in mcp_server.py to clarify its purpose; change publisher name in package.json to reflect the correct author.

--- a/extension/package.json
+++ b/extension/package.json
@@ -3,7 +3,7 @@
   "displayName": "Prompt For User Input MCP",
   "description": "Native input dialogs for MCP user prompts",
   "version": "1.0.0",
-  "publisher": "prompt-for-user-input-mcp",
+  "publisher": "Jesse Gomez",
   "engines": {
     "vscode": "^1.74.0"
   },
