feat: Implement authentication middleware in mcp_server.py and update MCP configuration to include authorization headers; modify .gitignore to exclude VS Code extension files and update README with server run instructions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,5 @@ version = "1.0.0"
 description = "An MCP server that enables AI models to prompt users for input directly through their code editor"
 authors = [{ name = "Jesse Gomez", email = "jesse.eric.gomez@gmail.com" }]
 license = { file = "LICENSE" }
-dependencies = ["mcp[cli]==1.17.0", "pydantic==2.12.0"]
+dependencies = ["mcp[cli]==1.17.0", "pydantic==2.12.0", "starlette==0.48.0"]
 requires-python = ">=3.13"
