refactor: Update authentication handling in mcp_server.py by implementing a BearerAuthBackend class, raising a custom exception for missing tokens, and modifying the README for clearer server run instructions; adjust cursor-mcp-config.json to use the correct environment variable syntax and update Python version requirement in pyproject.toml and uv.lock.

--- a/cursor-mcp-config.json
+++ b/cursor-mcp-config.json
@@ -3,7 +3,7 @@
     "prompt-for-user-input-mcp": {
       "url": "http://127.0.0.1:4444/mcp",
       "headers": {
-        "Authorization": "Bearer ${env.PROMPT_FOR_USER_INPUT_MCP_AUTH_TOKEN}"
+        "Authorization": "Bearer ${env:PROMPT_FOR_USER_INPUT_MCP_AUTH_TOKEN}"
       }
     }
   }
